[gd_scene load_steps=3 format=2]

[ext_resource path="res://Assets/bug-splash.png" type="Texture" id=1]
[ext_resource path="res://Scripts/bug_blood.gd" type="Script" id=2]

[node name="Blood" type="CPUParticles2D"]
amount = 10
explosiveness = 1.0
texture = ExtResource( 1 )
gravity = Vector2( 0, 0 )
initial_velocity = 150.51
initial_velocity_random = 1.0
angular_velocity = 85.54
angular_velocity_random = 1.0
damping = 86.14
damping_random = 1.0
scale_amount = 0.5
scale_amount_random = 1.0
color = Color( 0.709804, 0.623529, 0.470588, 1 )
hue_variation = 0.05
hue_variation_random = 0.34
script = ExtResource( 2 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.6
one_shot = true
autostart = true

[node name="Timer2" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_Timer2_timeout"]
